2011-03-06  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclUtil.c (TclFindElement):	Guard escape sequence scans
	to not overrun the string end.  [Bug 3192636]

2011-03-05  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclParse.c (TclParseBackslash): Correct trunction checks in
	* tests/parse.test:	\x and \u substitutions.  [Bug 3200987]

2011-01-25  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclCkalloc.c:  [Bug 3129448]: Possible over-allocation on 64-bit
	* generic/tclHash.c:     platforms, part 2, backported strcpy->memcpy
	* generic/tclProc.c      change but not change in any struct.

2011-01-14  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tclWinDde.c:  Fix gcc-4.5.2 error: lvalue required as ...
	* win/tclWinReg.c:  (backported from 8.5/8.6)

2010-12-05  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclCmdMZ.c: [Bug 3127687] Triggers FORTIFY_SOURCE
	buffer overflow detection

2010-11-03  Jeff Hobbs  <jeffh@ActiveState.com>

	Backported from 8.6 (see 2010-08-04).
	* win/tclWin32Dll.c (asciiProcs, unicodeProcs):
	* win/tclWinLoad.c (TclpDlopen): 'load' use LoadLibraryEx with
	* win/tclWinInt.h (TclWinProcs): LOAD_WITH_ALTERED_SEARCH_PATH to
	prefer dependent DLLs in same dir as loaded DLL.

2010-10-31  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4     Add -D_CRT_SECURE_NO_DEPRECATE and
	-D_CRT_NONSTDC_NO_DEPRECATE, reducing the number of
	deprecation warnings on later VC++ versions.
	* win/rules.vc   Better VCVERSION determination
	* win/configure  (regenerated with autoconf 2.13)
	All changes backported from Tcl8.5/8.6

2010-10-23  Jan Nijtmans  <nijtmans@users.sf.net>

	* tools/uniParse.tcl:   [Bug 3085863]: tclUniData 9 years old
	* tools/uniClass.tcl:   Upgrade everything to Unicode 6.0, except
	* tests/utf.test:       non-BMP characters > 0xFFFF
	* generic/tclUniData.c: (re-generated)
	* generic/regc_locale.c:(re-generated)
	* generic/regcomp.c:    fix comment/signatures referencing regc_locale